Tidy up dockerfile
Install the nifti dependency manually so that ubuntu bionic's
default cmake version can be used. This can be changed to an
apt install at a later date.

Install cmake 3.11 to test the fetch functionality of the cmake
build (fetching the nifti dependency and test data). Add an example
of such usage.

Tidy indentation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -324,7 +324,7 @@ cmake_dependent_option(
   TEST_INSTALL
   "Add a test to check that linking to SO libraries occurs correctly during installation."
   ON
-  "${NIFTI_PACKAGE_PREFIX};${GIFTI_BUILD_APPLICATIONS};${BUILD_SHARED_LIBS};${GIFTI_BUILD_TESTING}"
+  "${NIFTI_PACKAGE_PREFIX};${GIFTI_BUILD_APPLICATIONS};${BUILD_SHARED_LIBS};${GIFTI_BUILD_TESTING};NOT USE_SYSTEM_NIFTI"
   OFF
 )
 # Test that installed linking works
